--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,18 +1,27 @@
-<h2>Sign up</h2>
+<div class="row">
+  <div class="col-sm-4">
+    <h2>Sign up</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: {role: "form"}) do |f| %>
+      <%= devise_error_messages! %>
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email, autofocus: true %></div>
+      <div class="form-group">
+        <%= f.email_field :email, autofocus: true, id: :email, class: "form-control", placeholder: "Enter Email" %>
+      </div>
 
-  <div><%= f.label :password %><br />
-    <%= f.password_field :password, autocomplete: "off" %></div>
+      <div class="form-group">
+        <%= f.password_field :password, autocomplete: "off", id: :password, class: "form-control", placeholder: "Password" %>
+      </div>
 
-  <div><%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %></div>
+      <div class="form-group">
+        <%= f.password_field :password_confirmation, autocomplete: "off", id: :password_confirmation, class: "form-control", placeholder: "Password Confirmation" %>
+      </div>
 
-  <div><%= f.submit "Sign up" %></div>
-<% end %>
+      <div><%= f.submit "Sign up", class: "btn btn-default" %></div>
+    <% end %>
 
-<%= render "devise/shared/links" %>
+    <br>
+
+    <%= render "devise/shared/links" %>
+  </div>
+</div>
