--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,6 +4,9 @@
 
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: {role: "form"}) do |f| %>
       <%= devise_error_messages! %>
+      <div class="form-group">
+        <%= f.text_field :username, autofocus: true, id: :username, class: "form-control", placeholder: "Enter Username" %>
+      </div>
 
       <div class="form-group">
         <%= f.email_field :email, autofocus: true, id: :email, class: "form-control", placeholder: "Enter Email" %>
