--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -6,6 +6,10 @@
       <%= devise_error_messages! %>
 
       <div class="form-group">
+        <%= f.text_field :username, autofocus: true, id: :username, class: "form-control", placeholder: "Enter Username" %>
+      </div>
+
+      <div class="form-group">
         <%= f.email_field :email, autofocus: true, id: :email, class: "form-control", placeholder: "Enter Email" %>
       </div>
 
